libycp/testsuite/tests/modules/y-modulei2.ycp
{
  import "YModule";

  YModule::ag = 27;
//  YModule::al = 27;	// error

  return YModule::ag == 27;
}
